Modified content inside main and footer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/png" href="images/logo.png"/>
     <title>Physics Derived</title>
 </head>
 <body>
     <header>
         <div id="lona">
             <div id="logo">
-                <img src="logo.png" width="40px;"/>
+                <img src="images/logo.png" width="40px;"/>
             </div>
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
 
@@ -37,22 +38,14 @@
     </header>
 
     <main>
-        <p>Hello</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatem, sunt libero modi temporibus, praesentium ullam quasi incidunt, provident ea voluptatum doloremque delectus reiciendis quam! Dignissimos odio et nobis quam!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        v
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quos facere optio aut maiores, doloremque eligendi officiis amet explicabo quis, id nihil adipisci cumque ab. Iste iure obcaecati dolores fuga!</p>
+        <h4 id="welh4" style="text-align: center;">Welcome to the library of Physics derivations!</h4>
+        <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning.</p>
     </main>
+
+    <footer>
+        <img src="images/logo.png" width="40px;" style="float: left;"/> 
+        <p>Image by Deed3, used under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
+    </footer>
 
 
 
