Updated the about page

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning.</p>
     </main>
 
+
+
     <footer>
         <img src="images/logo.png" width="40px;" style="float: left;"/> 
-        <p>Image by Deed3, used under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
+        <p><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Hydrogen_eigenstate_n5_l2_m1.png/1024px-Hydrogen_eigenstate_n5_l2_m1.png">Image</a> by Deed3, under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
     </footer>
 
 
