--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>About Us</title>
+    <link rel="icon" type="image/png" href="images/logo.png"/>
+    <title>About Us - Physics Derived</title>
 </head>
 <body>
     <header>
         <div id="lona">
             <div id="logo">
-                <img src="logo.png" width="40px;"/>
+                <img src="images/logo.png" width="40px;"/>
             </div>
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
 
@@ -34,6 +35,22 @@
             <a href="further.html"><div class="nav-item">Further</div></a>
         </nav>
     </header>
+
+    <main>
+        <h1 style="text-align: center; font-weight: lighter;">Welcome to Physics Derived</h1>
+
+        <p style="margin-left: 20px; margin-right: 20px;">Physics Derived is aimed to be a reference website for many concepts in Physics. It is a website for academics and students of physics and related fields. With your support, we are working to make this website a library of derivations in physics, which is a crutial tool for active research. </p>
+    </main>
+
+
+
+
+
+
+    <footer>
+        <img src="images/logo.png" width="40px;" style="float: left;"/> 
+        <p><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Hydrogen_eigenstate_n5_l2_m1.png/1024px-Hydrogen_eigenstate_n5_l2_m1.png">Image</a> by Deed3, under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
+    </footer>
 
 
 
