--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" type="image/png" href="images/logo.png"/>
+    <link rel="icon" type="image/png" href="logo.png"/>
     <title>Physics Derived</title>
 </head>
 <body>
     <header>
         <div id="lona">
             <div id="logo">
-                <img src="images/logo.png" width="40px;"/>
+                <img src="logo.png" alt="logo" width="30px;"/>
             </div>
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
 
@@ -39,14 +39,61 @@
 
     <main>
         <h4 id="welh4" style="text-align: center;">Welcome to the library of Physics derivations!</h4>
-        <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning.</p>
+        <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning. Explore the available chapters below.</p>
+        <hr>
+        
+        <h1>Continue Learning</h1>
+
+        <div id="divgrid">
+            <a href="#">
+                <div class="chbox">
+                <img src="images/apmath.png" alt="Free body diagram of an extended body" style="width: 200px; padding-top: 8px;"/>
+                <h3 style="padding-top: 24px;">Mathematical Methods in Physics</h3>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="chbox">
+                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
+                    <h3>Classical Mechanics</h3>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="chbox">
+                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
+                    <h3>Classical Mechanics</h3>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="chbox">
+                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
+                    <h3>Classical Mechanics</h3>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="chbox">
+                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
+                    <h3>Classical Mechanics</h3>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="chbox">
+                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
+                    <h3>Classical Mechanics</h3>
+                </div>
+            </a>
+        </div>
     </main>
 
 
 
     <footer>
-        <img src="images/logo.png" width="40px;" style="float: left;"/> 
-        <p><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Hydrogen_eigenstate_n5_l2_m1.png/1024px-Hydrogen_eigenstate_n5_l2_m1.png">Image</a> by Deed3, under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
+        <img src="logo.png" width="30px;" style="float: left;"/> 
+        <p style="margin-top: 4px;"><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Hydrogen_eigenstate_n5_l2_m1.png/1024px-Hydrogen_eigenstate_n5_l2_m1.png">Image</a> by Deed3, under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
     </footer>
 
 
