--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" type="image/png" href="logo.png"/>
+    <link rel="icon" type="image/png" href="icon.png"/>
     <title>Physics Derived</title>
 </head>
 <body>
     <header>
         <div id="lona">
             <div id="logo">
-                <img src="logo.png" alt="logo" width="30px;"/>
+                <img src="f2.png" alt="logo" width="50px;" style="padding-top: 4px;"/>
             </div>
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
 
