Added new chapters folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div id="lona">
             <div id="logo">
-                <img src="f2.png" alt="logo" width="50px;" style="padding-top: 4px;"/>
+                <img src="logo.png" alt="logo" width="45px;"/>
             </div>
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
 
@@ -45,42 +45,42 @@
         <h1>Continue Learning</h1>
 
         <div id="divgrid">
-            <a href="#">
+            <a href="chapters/Mathematical methods in physics.html">
                 <div class="chbox">
                 <img src="images/apmath.png" alt="Free body diagram of an extended body" style="width: 200px; padding-top: 8px;"/>
                 <h3 style="padding-top: 24px;">Mathematical Methods in Physics</h3>
                 </div>
             </a>
 
-            <a href="">
+            <a href="chapters/vectors.html">
+                <div class="chbox">
+                    <img src="images/vectorf.png" alt="Free body diagram of an extended body" style="width: 181px;"/>
+                    <h3>Vectors</h3>
+                </div>
+            </a>
+
+            <a href="" style="display: none;">
                 <div class="chbox">
                     <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
                     <h3>Classical Mechanics</h3>
                 </div>
             </a>
 
-            <a href="">
+            <a href="" style="display: none;">
                 <div class="chbox">
                     <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
                     <h3>Classical Mechanics</h3>
                 </div>
             </a>
 
-            <a href="">
+            <a href="" style="display: none;">
                 <div class="chbox">
                     <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
                     <h3>Classical Mechanics</h3>
                 </div>
             </a>
 
-            <a href="">
-                <div class="chbox">
-                    <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
-                    <h3>Classical Mechanics</h3>
-                </div>
-            </a>
-
-            <a href="">
+            <a href="" style="display: none;">
                 <div class="chbox">
                     <img src="images/classimech.png" alt="Free body diagram of an extended body"/>
                     <h3>Classical Mechanics</h3>
@@ -92,8 +92,7 @@
 
 
     <footer>
-        <img src="logo.png" width="30px;" style="float: left;"/> 
-        <p style="margin-top: 4px;"><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Hydrogen_eigenstate_n5_l2_m1.png/1024px-Hydrogen_eigenstate_n5_l2_m1.png">Image</a> by Deed3, under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.</p>
+        
     </footer>
 
 
