changes the favicon

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" type="image/png" href="icon.png"/>
+    <link rel="icon" type="image/ico" href="favicon.ico"/>
     <title>About Us - Physics Derived</title>
 </head>
 <body>
@@ -40,11 +40,14 @@
     <main>
         <h1 style="text-align: center; font-weight: 200;">Welcome to Physics Derived</h1>
 
-        <p style="margin-left: 20px; margin-right: 20px;">Physics Derived is aimed to be a reference website for concepts in Physics. It is a website for academics and students of physics and related fields. With your support, we are working to make this website a library of derivations in physics, which is a crucial tool for active research. </p>
+        <center>
+            <p>Physics Derived is aimed to be a reference website for concepts in Physics. It is a website for academics and students of physics and related fields. With your support, we are working to make this website a library of derivations in physics, which is a crucial tool for active research. </p>
 
-        <hr/>
+            <hr/>
 
-        <p><b>Get started</b> by navigarting to chapters and select any topic you did like to study now. (Contents in some chapters might not be available for now, but it will be added in due course of time, actually pretty soon).</p>
+        
+            <p><b>Get started</b> by navigating to <a style="text-decoration: none;" href="chapters.html">chapters</a> and select any topic you did like to study now. (Contents in some chapters might not be available for now, but it will be added in due course of time, actually pretty soon).</p>
+        </center>
 
 
 
