--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="canonical" href="https://www.physicsderived.club">
-    <link rel="icon" type="image/ico" href="favicon.ico"/>
+    <link rel="canonical" href="https://physicsderived.club">
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <title>Physics Derived</title>
 </head>
 <body>
