--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="canonical" href="https://physicsderived.club">
+        <script type="application/ld+json">
+            {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Physics Derived",
+            "url": "https://physicsderived.club"
+            }
+        </script>
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Physics Derived</title>
 </head>
