--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
-    <title>About Us - Physics Derived</title>
+    <title>About - Physics Derived</title>
 </head>
 <body>
     <header>
