added schema for organization

--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="canonical" href="https://physicsderived.club">
-        <script type="application/ld+json">
-            {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "name": "Physics Derived",
-            "url": "https://physicsderived.club"
-            }
-        </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Website",
+        "name": "Physics Derived",
+        "url": "https://physicsderived.club"
+        }
+    </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Physics Derived",
+        "url": "https://physicsderived.club",
+        "logo": "https://physicsderived.club/logo.png"
+        }
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Physics Derived</title>
 </head>
