added contact form

--- a/about.html
+++ b/about.html
@@ -48,6 +48,8 @@
 
         
             <p><b>Get started</b> by navigating to <a style="text-decoration: none;" href="chapters.html">chapters</a> and select any topic you did like to study now. (Contents in some chapters might not be available for now, but it will be added in due course of time, actually pretty soon).</p>
+
+            <p>We would be very happy to look to your feedback for this website. You can give feedback <a href="contact.html">here</a>.</p>
         </center>
 
 
