--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         </nav>
     </header>
 
-    <main>
+    <main style="width: 100%;">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckTGIf484YcuR275eDtyjRPjWS9K4kmopAoPNwiq3_6gnG_A/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
 
