addes new feedback and cotact forms and sections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <a href="contact.html" title="Contact Us"><div class="nav-item">Contact</div></a>
-            <a href="further.html"><div class="nav-item">Further</div></a>
+            <a href="/feedback.html"><div class="nav-item">Feedback</div></a>
         </nav>
     </header>
 
