--- a/feedback.html
+++ b/feedback.html
@@ -51,6 +51,13 @@
     </header>
 
     <main style="width: 100%;">
+
+        <div id="fixedmodediv">
+            <div id="modediv" onclick="modechange()">
+                <div id="modebut"></div>
+            </div>
+        </div>
+
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckTGIf484YcuR275eDtyjRPjWS9K4kmopAoPNwiq3_6gnG_A/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
 
@@ -83,7 +90,7 @@
 
 
 
-
+    <script src="index.js"></script>
 
     <script>
     const navLinks = document.querySelectorAll('nav a');
