--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
     </header>
 
     <main>
+
+        <div id="fixedmodediv">
+            <div id="modediv" onclick="modechange()">
+                <div id="modebut"></div>
+            </div>
+        </div>
+
         <h4 id="welh4" style="text-align: center;">Welcome to the library of Physics derivations!</h4>
         <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning. Explore the available chapters below.</p>
         <hr>
@@ -149,8 +156,7 @@
 
 
 
-
-
+    <script src="index.js"></script>
 
     <script>
     const navLinks = document.querySelectorAll('nav a');
