--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="https://kit.fontawesome.com/6b5f9e533c.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="style.css"/>
     <link rel="canonical" href="https://physicsderived.club">
+    
 
     <script type="application/ld+json">
         {
@@ -73,7 +76,10 @@
 
         <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
-                <div id="modebut"></div>
+                <div id="modebut">
+                    <i id="sun" class="fa-solid fa-sun"></i>
+                    <i id="moon" class="fa-solid fa-moon" ></i>
+                </div>
             </div>
         </div>
 
