--- a/index.html
+++ b/index.html
@@ -137,7 +137,19 @@
 
 
     <footer>
-        <p style="align-self: center; padding-left: 10px; text-shadow: 0 0 1px white;"> &copy; 2025 <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
+        <p> &copy; 2025 <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
+
+        <p>Credits:<br/> 
+            <ol>
+                <li>
+                    Icons from <a href="https://fontawesome.com" target="_blank">Font Awesome</a> licenced under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
+                </li>
+
+                <!-- <li>
+                    Pdf from <a href="https://github.com/eKoopmans/html2pdf" target="_blank">html2pdf.js</a> licenced under <a href="https://github.com/eKoopmans/html2pdf.js/blob/main/LICENSE" target="_blank">MIT License</a>
+                </li> -->
+            </ol>
+        </p>
     </footer>
 
 
