i am not a robot trunstile check

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="https://kit.fontawesome.com/6b5f9e533c.js" crossorigin="anonymous"></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" defer></script>
     
     <link rel="stylesheet" href="style.css"/>
+    <style>
+        header{
+            display: none;
+        }
+        main{
+            display: none;
+        }
+        footer{
+            display: none;
+        }
+    </style>
     <link rel="canonical" href="https://physicsderived.club">
     
 
@@ -152,6 +164,8 @@
         </p>
     </footer>
 
+
+    <div  id="myWidget"></div>
 
 
 
