--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <meta property="og:site_name" content="Physics Derived">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div id="lona">
             <div id="navbar" onclick="ocnav()">
                 <div class="navdiv" id="navbar1"></div>
@@ -84,7 +84,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
 
         <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
@@ -148,7 +148,7 @@
 
 
 
-    <footer>
+    <footer class="footer">
         <p> &copy; 2025 <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
 
         <p>Credits:<br/> 
