changed back as usual

--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" defer></script>
     
     <link rel="stylesheet" href="style.css"/>
-    <style>
-        header{
-            display: none;
-        }
-        main{
-            display: none;
-        }
-        footer{
-            display: none;
-        }
-    </style>
     <link rel="canonical" href="https://physicsderived.club">
     
 
@@ -46,7 +35,7 @@
     <meta property="og:site_name" content="Physics Derived">
 </head>
 <body>
-    <header class="header">
+    <header>
         <div id="lona">
             <div id="navbar" onclick="ocnav()">
                 <div class="navdiv" id="navbar1"></div>
@@ -84,7 +73,7 @@
         </nav>
     </header>
 
-    <main class="main">
+    <main>
 
         <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
@@ -148,7 +137,7 @@
 
 
 
-    <footer class="footer">
+    <footer>
         <p> &copy; 2025 <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
 
         <p>Credits:<br/> 
@@ -165,7 +154,6 @@
     </footer>
 
 
-    <div  id="myWidget"></div>
 
 
 
