added canonical tags in each page

--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Not Found</title>
+  <link rel="canonical" href="https://physicsderived.club/404.html">
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 50px; }
   </style>
