--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/6b5f9e533c.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/style.css"/>
+    <link rel="canonical" href="https://physicsderived.club/contact.html">
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Contact Us</title>
 
