--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/6b5f9e533c.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="style.css"/>
-    <link rel="canonical" href="https://physicsderived.club">
+    <link rel="canonical" href="https://physicsderived.club/index.html">
     
 
     <script type="application/ld+json">
