--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/6b5f9e533c.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="style.css"/>
-    <link rel="canonical" href="https://physicsderived.club/about.html">
+    <link rel="canonical" href="https://physicsderived.club/about">
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>About</title>
 </head>
