added og meta tag in each site page

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <link rel="canonical" href="https://physicsderived.club/contact">
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Contact Us</title>
+    <meta property="og:site_name" content="Physics Derived">
+    <meta property="og:title" content="Contact Us">
 
 
     
