--- a/feedback.html
+++ b/feedback.html
@@ -10,6 +10,8 @@
     <link rel="canonical" href="https://physicsderived.club/feedback">
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Feedback</title>
+    <meta property="og:site_name" content="Physics Derived">
+    <meta property="og:title" content="Feedback">
 
 
     
