--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 50px; }
   </style>
+  <meta property="og:site_name" content="Physics Derived">
+  <meta property="og:title" content="Page Not Found">
 </head>
 <body>
   <h1>404 - Page Not Found</h1>
