--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
     <title>Physics Derived</title>
     <meta property="og:site_name" content="Physics Derived">
+    <meta property="og:title" content="Physics Derived">
 </head>
 <body>
     <header>
