--- a/404.html
+++ b/404.html
@@ -13,6 +13,34 @@
 <body>
   <h1>404 - Page Not Found</h1>
   <p>Sorry, the requested page doesn't exist.</p>
+  <div id="suggestion-box"></div>
+
   <a href="/">Back to Home</a>
+
+
+
+  <script>
+    
+    const path = window.location.pathname;
+    const term = decodeURIComponent(path.split('/').pop().replace('.html', '').replace(/[-_]/g, ' '));
+
+    const suggestions = [
+      { keyword: 'vector', title: 'Vectors', url: '/vectors' },
+      { keyword: 'math', title: 'Mathematical methods', url: '/Mathematical_methods_in_physics' },
+      { keyword: 'about', title: 'About Us', url: '/about' },
+      { keyword: 'contact', title: 'Contact Us', url: '/contact' },
+      { keyword: 'feedback', title: 'Feedback', url: '/feedback' },
+    ];
+
+    const match = suggestions.find(s => term.toLowerCase().includes(s.keyword));
+    if (match) {
+      document.getElementById('suggestion-box').innerHTML = `
+        <p>Were you looking for:</p>
+        <a href="${match.url}">${match.title}</a>
+      `;
+    }
+
+
+  </script>
 </body>
 </html>
