--- a/404.html
+++ b/404.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Not Found</title>
+  <link rel="stylesheet" href="style.css"/>
   <link rel="canonical" href="https://physicsderived.club/404">
+
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; }
+    body { 
+      font-family: sans-serif; 
+      text-align: center; 
+      margin-top: 50px; 
+    }
+
+    body a:link{
+      text-decoration: none;
+      color: hsl(920, 100%, 50%);
+    }
+
+    body a:visited{
+      color: hsl(263, 93%, 66%);
+    }
   </style>
+
   <meta property="og:site_name" content="Physics Derived">
   <meta property="og:title" content="Page Not Found">
 </head>
@@ -18,6 +34,7 @@
   <a href="/">Back to Home</a>
 
 
+  <script src="index.js"></script>
 
   <script>
     
