--- a/about.html
+++ b/about.html
@@ -33,7 +33,15 @@
             </div>
             
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
+
+            <div id="modebut" onclick="modechange()">
+                <i id="sun" class="fa-solid fa-sun"></i>
+                <i id="moon" class="fa-solid fa-moon" ></i>
+            </div>
         </div>
+
+        
+
         <nav id="nav">
             <a href="index.html" title="Home"><div class="nav-item">Home</div></a>
             <a href="about.html" title="About this site"><div class="nav-item">About</div></a>
@@ -53,14 +61,14 @@
     </header>
 
     <main>
-        <div id="fixedmodediv">
+        <!-- <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
                 <div id="modebut">
                     <i id="sun" class="fa-solid fa-sun"></i>
                     <i id="moon" class="fa-solid fa-moon" ></i>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <h1 style="text-align: center; font-weight: 200;">Welcome to Physics Derived</h1>
 
