--- a/feedback.html
+++ b/feedback.html
@@ -36,6 +36,11 @@
             </div>
             
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
+
+            <div id="modebut" onclick="modechange()">
+                <i id="sun" class="fa-solid fa-sun"></i>
+                <i id="moon" class="fa-solid fa-moon" ></i>
+            </div>
         </div>
         <nav id="nav">
             <a href="/index.html" title="Home"><div class="nav-item">Home</div></a>
@@ -57,14 +62,14 @@
 
     <main style="width: 100%;">
 
-        <div id="fixedmodediv">
+        <!-- <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
                 <div id="modebut">
                     <i id="sun" class="fa-solid fa-sun"></i>
                     <i id="moon" class="fa-solid fa-moon" ></i>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckTGIf484YcuR275eDtyjRPjWS9K4kmopAoPNwiq3_6gnG_A/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
