--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             </div>
 
             <div id="name">Physics<span style="color: hsl(170, 100%, 50%);">Derived</span></div>
+
+            <div id="modebut" onclick="modechange()">
+                <i id="sun" class="fa-solid fa-sun"></i>
+                <i id="moon" class="fa-solid fa-moon" ></i>
+            </div>
         </div>
         <nav id="nav">
             <a href="index.html" title="Home"><div class="nav-item">Home</div></a>
@@ -75,14 +80,14 @@
 
     <main>
 
-        <div id="fixedmodediv">
+        <!-- <div id="fixedmodediv">
             <div id="modediv" onclick="modechange()">
                 <div id="modebut">
                     <i id="sun" class="fa-solid fa-sun"></i>
                     <i id="moon" class="fa-solid fa-moon" ></i>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <h4 id="welh4" style="text-align: center;">Welcome to the library of Physics derivations!</h4>
         <p style="margin-top:0;">Here you can discover all the beautifully curated physics and math concepts with rigor, right from the beginning. Explore the available chapters below.</p>
