added new keywords from vectors.html and mathermatical methods.html to 404.html for broder search result

--- a/404.html
+++ b/404.html
@@ -47,7 +47,26 @@
       { keyword: 'about', title: 'About Us', url: '/about' },
       { keyword: 'contact', title: 'Contact Us', url: '/contact' },
       { keyword: 'feedback', title: 'Feedback', url: '/feedback' },
-      { keyword: 'chapter', title: 'Chapters', url: '/chapters' },      
+      { keyword: 'chapter', title: 'Chapters', url: '/chapters' }, 
+      
+      // Vectors.html topics
+      { keyword: 'introduction', title: 'Introduction (Vectors)', url: '/chapters/vectors#Introduction' },
+      { keyword: 'scalars', title: 'Scalars', url: '/chapters/vectors#Scalars' },
+      { keyword: 'vectors', title: 'Vectors', url: '/chapters/vectors#Vectors' },
+      { keyword: 'addition of vectors', title: 'Addition of Vectors', url: '/chapters/vectors#Addition_of_Vectors' },
+      { keyword: 'triangle law', title: 'Triangle Law', url: '/chapters/vectors#Triangle_Law' },
+      { keyword: 'parallelogram law', title: 'Parallelogram Law', url: '/chapters/vectors#Parallelogram_Law' },
+      { keyword: 'difference of two vectors', title: 'Difference of two Vectors', url: '/chapters/vectors#Difference_of_two_Vectors' },
+
+      // Mathematical_methods_in_physics.html topics
+      { keyword: 'basic geometry', title: 'Basic Geometry', url: '/chapters/Mathematical_methods_in_physics#basicgeometry' },
+      { keyword: 'pythagoras theorem', title: 'Pythagoras Theorem', url: '/chapters/Mathematical_methods_in_physics#Pythagoras_Theorem' },
+      { keyword: 'distance formula', title: 'Distance Formula', url: '/chapters/Mathematical_methods_in_physics#Distance_Formula' },
+      { keyword: 'trigonometry', title: 'Trigonometry', url: '/chapters/Mathematical_methods_in_physics#trigonometry' },
+      { keyword: 'identities', title: 'Pythagorean Trigonometric Identities', url: '/chapters/Mathematical_methods_in_physics#Pythagorean_Trigonometric_Identities' },
+      { keyword: 'angles', title: 'Review and talk on angles', url: '/chapters/Mathematical_methods_in_physics#Review_and_talk_on_angles' },
+      { keyword: 'redefining trigonometric functions', title: 'Redefining trigonometric functions', url: '/chapters/Mathematical_methods_in_physics#Redefining_trigonometric_functions' },
+      { keyword: 'angle sum relations', title: 'Angle Sum relations', url: '/chapters/Mathematical_methods_in_physics#Angle_Sum_relations' },
     ];
 
     const match = suggestions.find(s => term.toLowerCase().includes(s.keyword));
