added the chapter and topic to vectors title

--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
     const term = decodeURIComponent(path.split('/').pop().replace('.html', '').replace(/[-_]/g, ' '));
 
     const suggestions = [
-      { keyword: 'vector', title: 'Vectors', url: '/chapters/vectors' },
+      { keyword: 'vector', title: 'Vectors (chapter)', url: '/chapters/vectors' },
       { keyword: 'math', title: 'Mathematical methods', url: '/chapters/Mathematical_methods_in_physics' },
       { keyword: 'about', title: 'About Us', url: '/about' },
       { keyword: 'contact', title: 'Contact Us', url: '/contact' },
@@ -51,8 +51,8 @@
       
       // Vectors.html topics
       { keyword: 'introduction', title: 'Introduction (Vectors)', url: '/chapters/vectors#Introduction' },
-      { keyword: 'scalar', title: 'Scalars', url: '/chapters/vectors#Scalars' },
-      { keyword: 'vector', title: 'Vectors', url: '/chapters/vectors#Vectors' },
+      { keyword: 'scalar', title: 'Scalars (topic)', url: '/chapters/vectors#Scalars' },
+      { keyword: 'vector', title: 'Vectors (topic)', url: '/chapters/vectors#Vectors' },
       { keyword: 'addition of vectors', title: 'Addition of Vectors', url: '/chapters/vectors#Addition_of_Vectors' },
       { keyword: 'triangle law', title: 'Triangle Law', url: '/chapters/vectors#Triangle_Law' },
       { keyword: 'parallelogram law', title: 'Parallelogram Law', url: '/chapters/vectors#Parallelogram_Law' },
