--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 <body>
   <h1>404 - Page Not Found</h1>
   <p>Sorry, the requested page doesn't exist.</p>
-  <div id="suggestion-box"></div>
+  <div id="suggestion-box" style="margin:auto; width:500px"></div>
   <br/>
   <a href="/">Back to Home</a>
 
